# ppo_arm_uav

./: README.md  dev_start.sh  docker-compose.yml  samestart_normal_draw.sh  samestart_ppo_draw.sh  start_docker.sh  startonce.sh  startonce_normal_draw .sh  startonce_ppo.sh  startonce_ppo_draw.sh
sarax_ws/src/: .rosinstall
sarax_ws/src/sarax/: Dockerfile  install_sarax_manual.sh
sarax_ws/src/sarax/scripts/: menu.py
sarax_ws/src/sarax/scripts/container/: docker_entrypoint.sh
sarax_ws/src/sarax/src/interaction_controller/config/sitl/: sitl_params.yaml
sarax_ws/src/sarax/src/interaction_controller/include/interaction_controller/: controller.h  controller_node.h
sarax_ws/src/sarax/src/interaction_controller/src/: controller.cpp  controller_node.cpp
sarax_ws/src/sarax/src/residual_ppo/: CMakeLists.txt  config_pretrain.yaml  config_tuneeeeeeeeeee.yaml  package.xml
sarax_ws/src/sarax/src/residual_ppo/config/: fixed_schedule.yaml
sarax_ws/src/sarax/src/residual_ppo/deploy/: fixed_schedule_runner.py  position_error_logger.py  residual_ppo_node.py
sarax_ws/src/sarax/src/residual_ppo/envs/: residual_env.py  sarax_dynamics.py
sarax_ws/src/sarax/src/residual_ppo/launch/: fixed_schedule_experiment.launch  residual_ppo_full_sitl.launch  residual_ppo_sitl.launch
sarax_ws/src/sarax/src/residual_ppo/logs/: evaluations.npz
sarax_ws/src/sarax/src/residual_ppo/logs/PPO_1/: events.out.tfevents.1774003174.ubuntu.44079.0
sarax_ws/src/sarax/src/residual_ppo/logs/PPO_2/: events.out.tfevents.1774176980.ubuntu.588061.0
sarax_ws/src/sarax/src/residual_ppo/logs/PPO_3/: events.out.tfevents.1774242145.ubuntu.1106938.0  events.out.tfevents.1774244079.ubuntu.1616734.0
sarax_ws/src/sarax/src/residual_ppo/logs/position_error/: ppo_off.csv  ppo_on.csv  run_20260414_080529.csv  run_20260414_081134.csv
sarax_ws/src/sarax/src/residual_ppo/models/: actor.pt  obs_rms.npz  ppo_residual_sarax_ft_vecnorm.pkl  ppo_residual_sarax_vecnorm.pkl
sarax_ws/src/sarax/src/residual_ppo/tools/: convert_model.py  plot_position_error_csv.py
sarax_ws/src/sarax/src/residual_ppo/train/: train_ppo.py
